--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Choice Picker UI</title>
 </head>
 <body>
+    <div class="container">
+        <h3>Enter all choices divided by comma (',').
+        <br>Enter when done.</h3>
+        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
+        <div id="tags">
+            
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
